[package]
name = "common"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
futures = "0.3.7"
async-recursion = "0.3"
lru = "0.6.1"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] } 
derive_more = "0.99.16"
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.9", features = ["full"] }
