[package]
name = "server"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
client = { path = "../client", default-features = false }
sauron = { version = "0.43", default-features = false }
tokio = { version = "1.9", features = ["full"] }
serde_json = "1.0"
common = { path = "../common" }

